2003-08-05  Achim Haertel <achim.haertel@e-technik.tu-chemnitz.de>
* sio.c: fixed random timeout while sectorread at datatransfer with
         command frames.
  - added: xf551 hispeed commands (0xA1, 0xA2, 0xD0, 0xD2, 0xD7)
  - added: status command reports errors in last read/write operation

  caveat: the only commandframe which transfers in hispeed is sectorread,
  all other use normal speed in the emu

* pokey.c: xf551 hispeed transfer uses SIO speed 0x10


2003-07-04  Piotr Fusik  <fox@scene.pl>
* mzpokeysnd.c: added key click

* cpu.c: a fix for "CMC Demo" crashing NEW_CYCLE_EXACT emulator
  (the problem could probably exist in many other demos
  which play samples using IRQ)


2003-06-27  Perry McFarlane  <ce596@torfree.net>
* cycle_map.[ch]: a fix that prevents "Cool Emotion" demo from crashing
  NEW_CYCLE_EXACT emulator if P: patch is disabled


2003-06-15  Petr Stehlik  <pstehlik@sophics.cz>
* compfile.c - quick fix for non-zlib capable environments


2003-05-28  Petr Stehlik  <pstehlik@sophics.cz>
* cpu_m68k.asm - major update, brings it to the 1.3.0+ level of cpu.c
  Thanks Gerhard.

* devices.c, atari.h, rdevice.[ch] - new R: device support (sockets).
  Originally written by Tom Hunt. Fixed, updated and prepared for Atari800
  integration by Chris Martin <cmartin@ti.com>. Thanks Chris!

* atari.c, ui.c, rt-config.[ch], Makefile.in - updated to allow run-time
  configuration of the R: entry in HATABS.

* DOC/sockets.txt - is an excerpt from mails I got from Chris. It may
  explain some basic ideas about the R: device.


2003-03-07  Piotr Fusik  <fox@scene.pl>
* pia.[ch], memory.[ch], atari.c: fixed MultiJoy and PORTB:
  PORTA must be configured as output to select MultiJoy port.
  PORTB direction register can be read.
  PORTB lines stay high if configured as inputs
  ("Road Race" works in XL/XE mode - didn't since 1.2.4).
  Reset sets PORTB output (not 0xD301, which may be direction register
  at the moment) to 0xFF.